manifests/github-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
  name: github-event-ingress
  namespace: argo-events
spec:
  rules:
    - host: github-webhook.engineering-az1.cloud.insitehq.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: github-eventsource-svc
                port:
                  number: 1200
